<resources>
    <string name="app_name">Food_Project</string>
    <string name="welcome_to_food_app">Chào mừng đến Foody</string>
    <string name="shared_and_delighful_for_an_easy_and_enjoyable_food">Dễ chia sẻ, tràn đầy hương vị, mang đến trải nghiệm thú vị</string>
    <string name="signup">Đăng kí</string>
    <string name="login">Đăng nhập</string>
    <string name="food">Foody</string>
    <string name="app">App</string>
    <string name="email_address">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="forget_password">Quên mật khẩu?</string>
    <string name="or">Hoặc</string>
    <string name="you_aren_t_a_user">Bạn chưa đăng kí?</string>
    <string name="sign_up">Đăng kí</string>
    <string name="sign_up_btn">Đăng kí</string>
    <string name="are_you_a_member_login">Bạn đã là thành viên ? </string>
    <string name="title">Tiêu đề</string>
    <string name="plus">+</string>
    <string name="time">Thời gian</string>
    <string name="_0">0k</string>
    <string name="username">Tên</string>
    <string name="facebook_app_id">404613822487477</string>
    <string name="fb_login_protocol_scheme">fb404613822487477</string>
    <string name="facebook_client_token">4ac97b184489f693414c1a7b8893aae3</string>
    <string name="title_activity_google_sign_in">GoogleSignIn</string>
    <string name="default_web_client_id">1082668886534-8mqqe8f286steka9sngtvsp7blbr7sji.apps.googleusercontent.com</string>
</resources>